<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Wydział Elektroniki, Telekomunikacji i Informatyki, Politechnika Gdańska
  ~ This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or   (at your option) any later version.
  ~
  ~ Copy of GNU General Public License is available at http://www.gnu.org/licenses/gpl-3.0.html
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_user_btn"
        android:onClick="addUser"
        android:textSize="15sp"
        android:id="@+id/button11" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_list"
        android:textSize="25sp"
        android:id="@+id/textView9"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_btn"
            android:textSize="25sp"
            android:id="@+id/textView8"
            android:layout_weight="0.2" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:id="@+id/um_searchInput" />
    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp" />

</LinearLayout>